# olavlan.github.io

./: .gitignore  .markdownlint.yml  .nojekyll  AGENTS.md  _quarto.yml  cspell-words.txt  cspell.config.yaml  index.html  index.qmd  listings.json  pyproject.toml  references.bib  robots.txt  search.json  sitemap.xml  zensical.toml
.cspell/: custom-dictionary-workspace.txt
.github/workflows/: publish.yml
_book/: search.json
_book/chapters/: intro.html
_book/site_libs/bootstrap/: bootstrap-47b97c3b19f000f83caa400c160a3434.min.css  bootstrap-4f4637d08bd72620603fa21db93662c6.min.css  (+4 more)
books/: index.html  index.qmd  index.xml
chapters/: pydantic-ai-articles.qmd
chapters/pydantic-ai/: index.md
docs/: about.html  advent-of-code-2025.md  index.html  index.md  index.xml  listings.json  search.json  sitemap.xml
docs/blog/: advent-of-code-2025.md
docs/books/: index.html  index.xml
docs/chapters/: intro.html
docs/chapters/pydantic-ai/: index.html
docs/posts-in-progress/: publishing-notebooks.md  python-package-for-notebooks.md
docs/programming/: index.html  index.xml
files/publish_quarto/: example.qmd
overrides/partials/: comments.html
posts/in-progress/: advent-of-code-2025.md  documents-custom-components.md  git.md  index.md  markdown.md  parsing-markdown.md  parsing.md  publish_quarto.md  publishing-notebooks.md
posts/old/: publishing-notebooks.md
programming/: index.html  index.qmd  index.xml
prototypes/: sort_podcast_episodes.py
prototypes/epubwords/: .sql-formatter.json  pyproject.toml
prototypes/epubwords/src/epubwords/: __init__.py  config.py  core.py  domain.py  main.py
prototypes/epubwords/src/epubwords/adapter/: db.py  ebook.py
prototypes/epubwords/src/epubwords/adapter/db/: __init__.py  schema.sql
prototypes/epubwords/src/epubwords/webapp/: __init__.py  books.py  epub.py
prototypes/epubwords/src/epubwords/webapp/ebook/: __init__.py  ebooks.html
prototypes/epubwords/tests/: conftest.py
prototypes/epubwords/tests/integration/: test_webapp.py
prototypes/publish_quarto/: hexagonal.mermaid  pyproject.toml
prototypes/publish_quarto/src/publish_quarto/: __init__.py  domain.py  notebook_client.py
prototypes/publish_quarto/src/publish_quarto/adapters/: content_parser.py  document_processor.py  storage.py
prototypes/publish_quarto/src/test/: example.qmd  test.py
prototypes/publish_quarto/tests/: .org.json  example.qmd  test_sync.py
site_libs/bootstrap/: bootstrap-04c09f144676219b820b8ad91291a94e.min.css  bootstrap-be9a0e647379dd48a08b6580d8f47316.min.css
site_libs/quarto-html/: quarto-syntax-highlighting-dark-34675552a74cbbc6d5b34b2f4b219b1c.css
(+50 files in other folders)
