[project]
name = "olavlan.github.io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "pydantic-ai-slim[openai]>=1.62.0",
    "ssb-pubmd>=0.1.11",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
