[project]
name = "publish-quarto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Olav Landsverk", email = "olav.landsverk@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
    "ipynbname>=2025.8.0.0",
    "narwhals>=2.15.0",
    "nh3>=0.3.2",
    "pandocfilters>=1.5.1",
]

[project.scripts]
publish-quarto = "publish_quarto:__main__.run"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pandas>=3.0.0",
]
